Chrooted PHP-FPM

--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -124,5 +124,6 @@
 ;  - /usr otherwise
 
 include=/etc/php/7.0/fpm/pool.d/*.conf
+include=/data/php-fpm.d/*.conf
 
 ;php_flag[display_errors] = off
